syntax = "proto3";
package authpackage;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

enum LoginCode {
  SUCCESS = 0;
  FAIL = 1;
}

message LoginResponse {
  LoginCode login_code = 1;
  optional string token = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}